[package]
name = "evm-simulate"
description = "Revm simulation"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "evm", "tracing", "debugging"]


[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = {version = "2.10.1", features = ["gzip", "json"]}
serde_json = "1.0.128"
eyre = "0.6.12"
serde = "1.0.210"
alloy = { version = "0.3.6",features = ["full"] }
revm = {version = "14.0.3", features = ["alloydb"]}
cacache = { version = "13.0.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }